- Don't get disconnected when AI's turned off in non-XKore mode.
- Makefile.win: enable compilation of Inject.dll. It seems the problem
  with gcc is in both Tools.dll *and* Inject.dll. *sigh*
- Changed avoidGM and avoid player code to an AI sequence.
  New entry for timeouts.txt:
	ai_avoidcheck 0.5
  New config options:
	avoidList	(set to 1 to turn on the avoid list)
	avoidList_reconnect


ChangeLog for skore-revamped
=============================

Another skore-revamped release (for those who complain about support for
(pre-)comodo):

- Added GPL clause.
- Improved platform autodetection. Won't attempt to execute 'uname -s'
  on Windows anymore.
- New function: lookpos().
- New command: lookp. Face a person.
- Resurrect the followSitAuto config option. Somehow it was in the manual
  but not implemented.
- New option: followFaceDirection. When set to 1, always look at master.
- Faster autofollow.
- "pl" and "ml" show more information now.
- Added support for recvpackets.txt (code taken from ModKore).
- Support secure login. New config option: secure
  0 = no secure login (iRO)
  1 = secure login method 1
  2 = secure login method 2
- New config option: guildAutoDeny
  Automatically deny guild join request.
- New command: guild. Support for listing guild members and info (thanks
  to ModKore).


Based on blueviper22's mod for RO 4.0:

- Merged X-Kore with skore-revamped. You can switch between "normal"
  (console) Kore and X-Kore by setting the config option "XKore"
  to 0 or 1. Add these to your config.txt:
  XKore 1
  exeName ragexe.exe
  commandPrefix ;

(Why didn't Kura do this in the first place? Maintaining one codebase is
easier than maintaining two.)


- More flexible packet debugger.
  * Removed option debug_packet
  * New options:
    debugPacket_unparsed: Dump unparsed packets
    debugPacket_received: Display all received packet switches
    debugPacket_ro_sent:  Display packet switches sent by the